--- a/vue_front/jsconfig.json
+++ b/vue_front/jsconfig.json
@@ -1,8 +1,15 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "target": "es2017",
+    "allowSyntheticDefaultImports": false,
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"],
+      "Config/*": ["src/config/*"],
+      "Components/*": ["src/components/*"],
+      "Ducks/*": ["src/ducks/*"],
+      "Shared/*": ["src/shared/*"],
+      "App/*": ["src/*"]
     }
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
