--- a/vue_front/package.json
+++ b/vue_front/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.4.8",
     "vue-screen": "^1.5.3",
+    "vue-social-sharing": "^3.0.4",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0"
   },
