min seo/reramder

--- a/vue_front/package.json
+++ b/vue_front/package.json
@@ -13,7 +13,9 @@
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "gsap": "./gsap-bonus.tgz",
+    "prerender-spa-plugin": "^3.4.0",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.4.8",
     "vue-screen": "^1.5.3",
     "vue-social-sharing": "^3.0.4",
